# androidFirstCmake

./: CMakeLists.txt  Test.c
